-Eliminated form submission bug for IE6 users. -Made validation errors more visible (red type, all caps) -changed all templates to use DTD STRICT doctype and  made necessary changes to templates.

--- a/static/style.css
+++ b/static/style.css
@@ -304,4 +304,10 @@ a img {
 	background: #eeeeee;
 }
 
+.wrong
+{
+    color: #ff0000;
+    text-transform:uppercase;
+}
+
 
